--- a/app/views/herb/index.html.erb
+++ b/app/views/herb/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Herb Garden App</h1>
 <ul>
   <% @herbs.each do |herb| %>
-    <li><%= herb.name %></li>
+    <li><%= link_to herb.name, herb_path(herb) %></li>
   <% end %>
 </ul>
