:sparkles: adds new form functionality

--- a/app/views/herb/index.html.erb
+++ b/app/views/herb/index.html.erb
@@ -4,3 +4,5 @@
     <li><%= link_to herb.name, herb_path(herb) %></li>
   <% end %>
 </ul>
+
+<p><%= link_to 'Create New Herb', herb_new_path %></p>
