:sparkles: adds create herb functionality

--- a/app/views/herb/new.html.erb
+++ b/app/views/herb/new.html.erb
@@ -11,6 +11,9 @@
   <br />
   <%= form.radio_button :watered, "No" %>
   <%= form.label :watered, "The herb has NOT been watered" %>
+  <br />
+  <br />
+  <%= form.submit 'Add Herb' %>
 <% end %>
 
 <p><%= link_to 'Home', herbs_path %></p>
