--- a/app/views/herb/show.html.erb
+++ b/app/views/herb/show.html.erb
@@ -3,4 +3,5 @@
 <p>Name of the herb: <%= @herb.name %></p>
 <p>Has the herb been watered: <%= @herb.watered %></p>
 
+<p><%= link_to 'Edit Herb', edit_herb_path(@herb) %></p>
 <p><%= link_to 'Home', herbs_path %></p>
