--- a/app/views/herb/show.html.erb
+++ b/app/views/herb/show.html.erb
@@ -4,4 +4,5 @@
 <p>Has the herb been watered: <%= @herb.watered %></p>
 
 <p><%= link_to 'Edit Herb', edit_herb_path(@herb) %></p>
+<p><%= link_to 'Delete Herb', delete_herb_path(@herb), data: { "turbo-method": :delete, turbo_confirm: "Are you sure you want to delete this herb?" } %></p>
 <p><%= link_to 'Home', herbs_path %></p>
